--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="top">
             <div class="budget">
                 <div class="budget__title">
-                     <span class="budget__title--month">Sariin orlogo zarlaga</span>-р сарын өрхийн санхүү
+                     <span class="budget__title--month">Sariin orlogo zarlaga</span>өрхийн санхүү
                 </div>
                 
                 <div class="budget__value">+ 2,345.64</div>
